[gd_scene load_steps=3 format=3 uid="uid://bi70y2ydkssn6"]

[ext_resource type="Script" path="res://scenes/checkpoints/checkpoint.gd" id="1_vvtis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wdvh"]
size = Vector2(133, 70)

[node name="Checkpoint" type="Node2D"]
script = ExtResource("1_vvtis")
time_for_stone_to_respawn = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(56.5, 25)
shape = SubResource("RectangleShape2D_1wdvh")

[node name="StoneRespawnNode" type="Node2D" parent="."]
position = Vector2(21, 35)

[node name="PlayerRespawnNode" type="Node2D" parent="."]
position = Vector2(98, 31)

[connection signal="body_entered" from="Area2D" to="." method="process_collision_with_player"]
